# genetic-algorighms

./: .gitignore  README.md  pyproject.toml
gen_algs/: __main__.py
gen_algs/app/: Dockerfile  app.py  evolution.py
gen_algs/app/flask/web/static/css/: graphics.css  grid.css
gen_algs/app/flask/web/static/js/: sideNav.js
gen_algs/app/flask/web/templates/: index.html
gen_algs/app/objects/: brain.py  individual.py
gen_algs/flask_app/: Dockerfile  __main__.py  evolution.py  flask_app.py  individual.py  test.ipynb
gen_algs/flask_app/web/static/css/: main.css  sliders.css
gen_algs/flask_app/web/static/js/: canvas.js  grid.js  main.js  sliders.js
gen_algs/flask_app/web/templates/: grid.html  root.html
gen_algs/jupyter/: Untitled.ipynb
genetic_algorithms/evolution_app/: Dockerfile  evolution.py
genetic_algorithms/evolution_app/objects/: brain.py  individual.py
genetic_algorithms/evolution_app/web/static/css/: sideNav.css
src/evolution_app/: .dockerignore  Dockerfile  app.py  build_flask_app_image.sh  demo_stream_app.py  docker-compose.yaml  evolution.py
src/evolution_app/objects/: brain.py  individual.py  keras_brain.py
src/evolution_app/web/static/js/: grid.js  main.js  sliders.js
src/evolution_app/web/templates/: demo_index.html  root.html
tests/time_benchmarks/: math_vs_numpy.py
