[tool.poetry]
name = "genetic-algorithms"
version = "0.1.0"
description = ""
authors = ["Adrian Vega <adrian.vega.del@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"
flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
